@@ -1,11 +1,13 @@
 AUX nginx-r1 1645 RMD160 d032feec43e4ba31ac5b6fffec478ebbeb49db60 SHA1 49f0db3efaccd3cef545b8c68cfa557ca829352f SHA256 b263a663399d2897dfdf53226d45fc3707bc9230bd687b8003d075a48f60ecaf
 AUX nginx.conf-r4 1473 RMD160 012556820bf2fe804454822cf88dbeb107a48715 SHA1 b0001ae5ab7fc9897ec27e3e40b34b09d5b06da3 SHA256 d8267e217a19283b0d972ad9f74348c467b8629583ebea27d5ee90b9e7669070
 DIST Ngx_rrd_graph-0.1.tar.gz 4005 RMD160 7ae96d110e748b2f4457545440c777918c145b0b SHA1 1428a7cecdad89de031f829b3fa485a8832b3f62 SHA256 e018221eba4ac91b5cbaabd440c2da72675c8432be12e001321293014a3d87e7
+DIST chunkin-nginx-module-0.16.tgz 78612 RMD160 c8cf529ea3bd1bfb7cd06ce63cf82896fbbbfe33 SHA1 3b8e1d0bc17973060599e6a7299512e164763e6c SHA256 d5714c2e2861306a5f63ce12dc558be61e462eeca353596c74c680662b92ea6c
 DIST nginx-0.8.28.tar.gz 615516 RMD160 7e48f7fb9846bd25ac11eda16ad49a746ce6d9c4 SHA1 d27d0da906d460751af263a13a520dda0afb41b0 SHA256 642b3bc58d5125859c74b4730f8049e61211bcf31612e2b14d9a182d25f11235
 DIST nginx-0.8.29.tar.gz 617202 RMD160 5960e7ec51261ec667f45722333971e26b759af4 SHA1 ff586e833688f1d72507091268e917c164784200 SHA256 64d96f6b37a1b38a21a819d28f7f57e9b1b5de319bc4d1f1907be8e5bdd1d631
 DIST nginx_mp4_streaming_public_20081229.tar.bz2 9469 RMD160 ec4c8a0ef86db6cf63f4697546462b127305f5a8 SHA1 ad909c369fa092b6ff457c599213d567a8a66936 SHA256 4908709c50f73d73cb1c16136eaca4b280d8abb60dfd302e79c48f71a68c5d3e
 DIST ngx_http_auth_pam_module-1.1.tar.gz 5193 RMD160 38437a1f5d34f93b22abb9f0a7181be756356d33 SHA1 d04065a512169925dda8bce710e1dc5012cac47b SHA256 ea9da5f106b952729398248cddabbe25f7a5752993e91c9b8252dbc2b03b8ecd
 EBUILD nginx-0.8.28-r50.ebuild 4938 RMD160 bb75364a71ce15909a8a67e21f6c896efc3d0167 SHA1 2dc253c7260f9d5d825667d23545a41b8bb2e45d SHA256 187b3f8d8eb2bff152c50390304b84b1d7a5ac727677a8ccdf1bf019f60bb5f6
 EBUILD nginx-0.8.29-r50.ebuild 4938 RMD160 bb75364a71ce15909a8a67e21f6c896efc3d0167 SHA1 2dc253c7260f9d5d825667d23545a41b8bb2e45d SHA256 187b3f8d8eb2bff152c50390304b84b1d7a5ac727677a8ccdf1bf019f60bb5f6
-MISC ChangeLog 1302 RMD160 6619705d6659095bb22665b8b70a356a78910d71 SHA1 decb46921f559aeb21d188111f94b978e193a37e SHA256 ea569362b8d4d54e1689f668f3a411364efc47aa3d37cf4744ba8e373b601d44
-MISC metadata.xml 1338 RMD160 3586b779c10dab5eaacbef98ddbe23196a2de648 SHA1 31af3d4de39856167e0095230494b86d02416b48 SHA256 0e72f15f93867c9865c7a1360d1b32a94d0b59d60805b454184a78513d2c6148
+EBUILD nginx-0.8.29-r51.ebuild 5316 RMD160 2a1472917475f480745a90395325287d9e893cda SHA1 6ec68310d5e295a9ff664b0d70630cee07012718 SHA256 556e5e6cb825b2a844ebf619b58e813fee76f9a492170db5ca014857ad2b41a2
+MISC ChangeLog 1419 RMD160 4152ca89ef82f591de301f7e08615944cf6a83d1 SHA1 4aa352180aa55be426da5eaac8e3686d044420f2 SHA256 afe950a88fbb5a70c9ada4202420246a7956465794649361f7ec8af02e26d3b2
+MISC metadata.xml 1395 RMD160 149200c7eab3ae92a1e3b4a26c509703a1c8d7f4 SHA1 27e972eca1e76102e0e77fe3d0f9eb3b2d902c66 SHA256 74425c2122111c39fad17920b9fe4f27a7a051b50240e74e4d9cf468885dce89
