@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header:
 
+  15 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +nginx-0.8.29-r51.ebuild, metadata.xml:
+  add chunk use flag
+
   06 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   nginx-0.8.28-r50.ebuild, nginx-0.8.29-r50.ebuild:
   fix bad depend
